demos/demo-8-files/Pod-QoS.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
spec:
  containers:
  - name: myapp
    image: mahendrshinde/myweb:1
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
  - name: myapp
    image: mahendrshinde/myweb:2
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
      requests:
        memory: "32Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
spec:
  containers:
  - name: myapp
    image: mahendrshinde/myweb:3
    resources:
      limits:
        memory: "64Mi"
        cpu: "250m"
    ports:
      - containerPort: 80
